# plix

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  plix_roadmap_1_0_0.md
.github/workflows/: release.yml
assets/linux/: README.md  io.github.plixlang.plix.metainfo.xml
bench/: Fib.java  Hello.java  Loop.java  README.md  array.js  array.px  array.py  fib.c  fib.js  fib.py  fib.rs  fib_c  fib_dyn.px  fib_typed.px  hello.c  hello.px  hello_c  loop.c  loop.js  loop.py  loop.rs  loop_c  loop_dyn.px  loop_typed.px  mem_check.sh  run_bench.py  strcat.js  strcat.px  strcat.py
bench/pro/: bench.rs
docs/: RELEASE_GUIDE.md  comparison.md  ffi-python.md  grammar.md  grammar_guide.md  install.md  memory.md  oop.md  release.md  security.md  stdlib.md  testing.md  tooling.md  typing.md
examples/: closures_match.px  features.px  fib.px  fs_sys_forge.px  http_server.px  mathlib.px  module_app.px  oop.px  ownership_err.px  ownership_ok.px  python_ai.px  test1.px  test2.px  test3.px  test4.px  test5.px  test_advanced.px  test_ai.px  test_new_modules.px  type_err.px  typed.px
rt/: Cargo.toml
rt/src/: builtins.rs  heap.rs  heap.rs.new  lib.rs  net.rs  pyffi.rs  value.rs
scripts/: fix_ci.sh  install.ps1  install.sh  release.sh
src/: api_docs.rs  ast.rs  async_await.rs  codegen.rs  concurrency.rs  docker.rs  fmt.rs  interp.rs  jit.rs  lexer.rs  lib.rs  lint.rs  lsp.rs  macros.rs  main.rs  manifest.rs  owncheck.rs  parser.rs  pm.rs  resolve.rs  security.rs  token.rs  typecheck.rs  wasm.rs  wasm_output.rs  zero_copy.rs
src/lsp/: mod.rs
src/stdlib/: ai.rs  ai_advanced.rs  blockchain.rs  compress.rs  crypto.rs  crypto_advanced.rs  csv.rs  db.rs  db_advanced.rs  edge.rs  encode.rs  forge.rs  graphics_advanced.rs  image.rs  json.rs  log.rs  math.rs  mod.rs  net_advanced.rs  net_http.rs  quantum.rs  random.rs  sound.rs  sys.rs  template.rs  time.rs  validator.rs  xml.rs  yaml.rs
tests/: core_test.px  deep_test.px  fuzz_gen.px  fuzz_parity.sh  move_error.px  release_preflight.sh  run_all.sh  stress_test.px  test_30_features.px  test_modules.px  test_py.px  test_strict.px  test_trait.px  type_guard_error.px  type_system_phase1_enum_test.px  type_system_phase1_function_test.px  type_system_phase1_sum_test.px  type_system_phase1_test.px
